# Portable-Comfy

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  building.md
packaging/: Portable-Comfy.desktop  appimage-launcher.sh  appimage-runtime-dependencies.patch  appimage-runtime-fuse-fallback.patch  launcher-requirements.txt  org.openresearchtools.PortableComfy.appdata.xml  runtime-constraints.txt  versions.env
scripts/: build_appimage.sh  build_appimage_runtime.sh  build_core_bundle.sh  build_environment_bundle.sh  build_portable.sh  build_python_runtime.sh  collect_frontend_licenses.py  collect_licenses.py  find_wayland_desktop_process.py  generate_environment_manifest.py  generate_file_manifest.py  generate_manifest.py  install_builtin_models.sh  install_runtime_dependencies.sh  inventory_appimage_sources.py  package_appimage_runtime_sources.py  preflight_environment.sh  preflight_portable.sh  prepare_core.sh  prepare_runtime_license_extras.py  prune_runtime_plugins.py  python_native_closure.py  qtwebengine_notices.py  repair_python_runtime.sh  smoke_appimage_fuse_fallback.sh  smoke_artifact.sh  smoke_environment_update.py  smoke_environment_update.sh  split_archive.py  verify_core_bundle.py  verify_core_identity.py  verify_environment_bundle.py  verify_file_manifest.py  verify_webengine_surface.py  write_runtime_manifest.sh
tests/: conftest.py  test_app.py  test_appimage_launcher.py  test_bootstrap_artifact.py  test_collect_licenses.py  test_core_identity.py  test_environment_bundle.py  test_environment_update_smoke.py  test_frontend_licenses.py  (+13 more)
(+10 files in other folders)
